home/css/home.css
/* ... */
body {
  padding-top: 5rem;
}

.container-fluid {
  padding-left: 0;
  padding-right: 0;
}

/*Content 1 part*/

.backgroundimg_container {
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.2),
      rgba(255, 255, 255, 0.2)
    ),
    url("/Photoshop Files/src_images/anastasiia-chepinska-lcfH0p6emhw-unsplash.jpg");
  height: auto;
  background-size: cover;
}

#content1_header_line1 {
  color: #fff;
  font-weight: 800;
  font-size: 2rem;
  line-height: 3.625rem;
  text-shadow: 2px 2px 2px black;
}

#content1_header_line2,
#content1_header_line3,
#content1_header_line4 {
  font-family: "Proxima Nova Extra Bold";
  font-size: 6rem;
  line-height: 6.25rem;
  color: #ffff;
  text-shadow: 2px 2px 2px black;
}

.header_container1 {
  padding-top: 5rem;
  padding-bottom: 5rem;
  margin-right: -3rem;
}

#content1_img_container {
  padding-top: 5rem;
}

#content1_img {
  height: 28rem;
  width: fit-content;
}
/*Content 2 part*/
.content2_container {
  background-color: #f0ff47;
  padding-top: 1rem;
  padding-bottom: 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

#content2_header {
  font-family: "Proxima Nova Extra Bold";
  font-size: 3rem;
}

/*Content 3 part*/
#content3_main_container {
  background-color: #339e3d;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.content3_header_container {
  padding-top: 1rem;
}

#content3_header {
  font-family: "Proxima Nova Extra Bold";
  font-size: 4rem;
  line-height: 78px;
  color: #fff;
  text-align: center;
}

#content3_details {
  font-family: "Proxima Nova";
  font-size: 1.5rem;
  line-height: 0;
  padding-bottom: 1rem;
  color: #fff;
}

#content3_main_img_container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

#content3_img1_container,
#content3_img2_container,
#content3_img3_container,
#content3_img4_container {
  border-radius: 1.938rem;
  /* width: 16rem;
  height: 12rem; */
  width: 16rem;
  height: 12rem;
  background-size: auto;
  margin: 0;
  padding: 0;
}

#content3_img {
  width: 100%;
  height: 100%;
  object-fit: fill;
  border-radius: 31px;
}

#content3_img:hover {
  transform: scale(1.1);
}

/*Content 4 part*/

#content4_main_left_container {
  display: flex;
  justify-content: flex-end;
  padding-right: 0;
  padding-left: 0;
}

.content4_left_container {
  padding-top: 7.75rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.content4_header_container1 {
  width: fit-content;
}

#content4_header_line1 {
  font-family: "Proxima Nova Extra Bold";
  font-size: 4rem;
}
#content4_header_line2 {
  font-family: "Proxima Nova Extra Bold";
  font-size: 4rem;
  line-height: 2.5rem;
}

#content4_header_line3 {
  font-family: "Proxima Nova Extra Bold";
  font-size: 4.5rem;
  color: #339e3d;
  line-height: 4rem;
}

#DAMBO {
  color: #339e3d;
  font-size: 4.5rem;
}

.content4_details_container1 {
  width: fit-content;
  margin-top: 4.1rem;
}

#content4_details_line1,
#content4_details_line2,
#content4_details_line3 {
  font-family: "Proxima Nova";
  font-size: 2rem;
  line-height: 42px;
  text-align: start;
}

.content4_details_container2 {
  margin-top: 2rem;
  width: fit-content;
}

.learn_more_button_container {
  width: 100%;
  padding-top: 2rem;
  padding-bottom: 8rem;
}

#learn_more_button {
  background-color: #339e3d;
  padding-left: 20px;
  padding-right: 20px;
  color: #fff;
  border: none;
  outline: none;
  border-radius: 1.5rem;
  font-family: "Proxima Nova Bold";
  font-size: 20px;
}

.content4_img_container {
  display: flex;
  justify-content: center;
  padding-bottom: 7rem;
}

/*learn more button fx*/
#learn_more_button:hover {
  background-color: #c18224;
  transition: 0.5s all ease-in-out;
}

#content4_right_container {
  height: fit-content;
}

.content4_img_container {
  padding-top: 4rem;
}

#content4_img {
  width: fit-content;
  height: fit-content;
}

#FOR_FREE{
  font-family: "Proxima Nova Extra Bold";
}

#content4_img:hover {
  transform: scale(1.1);
}

/*Footer part*/
#footer_main_container {
  background-color: white;
}

#footer_icon {
  width: 8rem;
  background-clip: inherit;
}

#icon_container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  height: 8rem;
}

.social_icons--link {
  align-items: center;
  color: #333;
  font-size: 2.5rem;
}

.social_icons--link:hover {
  color: #339e3d;
  transition: all 0.3s ease-in-out;
}

#footer_center {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5rem;
}

/*for Responsiveness*/

@media screen and (max-width: 1999px) {
  #content1_header_line1 {
    font-size: 2rem;
  }

  #content1_header_line2,
  #content1_header_line3,
  #content1_header_line4 {
    font-size: 6rem;
  }
}

@media screen and (max-width: 1200px) {
  /*May kailangan pang ayusin*/
  #content4_header_line1,
  #content4_header_line2 {
    font-size: 3.5rem;
  }

  #content4_details_line1,
  #content4_details_line2,
  #content4_details_line3 {
    font-size: 1.5rem;
  }

  #content1_header_line1 {
    font-size: 1.5rem;
  }

  #content1_header_line2,
  #content1_header_line3,
  #content1_header_line4 {
    font-size: 5rem;
    line-height: 6rem;
  }

  #content1_img_container {
    /*dito*/
    display: flex;
    justify-content: center;
  }

  #content2_header {
    font-size: 2rem;
  }

  .content4_left_container {
    width: 100%;
  }

  .content4_details_container2 {
    text-align: center;
  }
}

@media screen and (max-width: 992px) {
  .header_container1 {
    margin-right: 0;
    text-align: end;
    padding-right: 3rem;
  }

  #content1_header_line1 {
    font-size: 1.5rem;
  }

  #content1_header_line2,
  #content1_header_line3,
  #content1_header_line4 {
    font-size: 4rem;
    line-height: 5rem;
  }
}
/* ... */

